tests/input/errors/expected_output/types.go
package errors

type errorString struct {
	s string
}

type joinError struct {
	errs []error
}
